# nektar-diffusion-eg

./: .gitignore  CMakeLists.txt  README.md  make.sh  run.sh  write_BC_files.py
data/: Lorenz_integrator.cpp  gen_lorenz_data.py  run_Lorenz_integrator.sh
data/orig/: lorenz.csv
runs/template/: session.xml
runs/templates/2d-diff/: session.xml
runs/templates/chaotic/: session.xml
runs/templates/cwipi-BCs/: bc-provider_session.xml  cmd_line.txt  diff-solver_session.xml
runs/templates/file-based_lorenz/: session.xml
runs/templates/file-based_sin/: session.xml
runs/templates/sin/: session.xml
scripts/: gen_lorenz_data.py  plot_lorenz_attractor.py  print_boundary_composites_2d.py  write_BC_files.py
scripts/common/: timesteps.py
scripts/plots/: animate_T_prof.py  plot_2d-coupled.py  plot_2d-diff.py  plot_boundary_gradients_evo.py
scripts/plots/utils/: __init__.py  locations.py  plotting.py  sin_analytic.py  srcs.py
src/: ADRSolver.cpp  UnsteadyDiffusion.cpp  UnsteadyDiffusion.h
src/BCProvider/: BCProvider.cpp  BCProviderSystem.cpp  BCProviderSystem.h
src/BoundaryConditions/: CFSBndCond.cpp  CFSBndCond.h  CWIPIBCs.cpp  CWIPIBCs.h  CWIPIBCsReceiver.cpp  CWIPIBCsReceiver.h  CWIPIBCsSender.cpp  CWIPIBCsSender.h  ChaoticBCs.cpp  ChaoticBCs.h  FileBasedBCs.cpp  FileBasedBCs.h
